      end of each rule.
    * parent scan: skip gateways that are reachable via PING
    * Allow subcheck to be in a separate file (e.g. foo.bar)
    * Contacts can now define *_notification_commands attributes which can now
      override the default notification command check-mk-notify
    * SNMP scan: fixed case where = was contained in SNMP info

    Checks & Agents:
    * New Checks for Siemens Blades (BX600)
    * New Checks for Fortigate Firewalls
    * Netapp Checks for CPU Util an FC Port throughput
    * FIX: megaraid_pdisks: handle case where no enclosure device exists
    * FIX: megaraid_bbu: handle the controller's learn cycle. No errors in that period.
    * mysql_capacity: cleaned up check, levels are in MB now
    * jolokia_info, jolokia_metrics: new rewritten checks for jolokia (formerly
      jmx4perl). You need the new plugin mk_jokokia for using them
    * added preliminary agent for OpenVMS (refer to agents/README.OpenVMS) 
    * vms_diskstat.df: new check file usage of OpenVMS disks
    * vms_users: new check for number of interactive sessions on OpenVMS
    * vms_cpu: new check for CPU utilization on OpenVMS
    * vms_if: new check for network interfaces on OpenVMS
    * vms_system.ios: new check for total direct/buffered IOs on OpenVMS
    * vms_system.procs: new check for number of processes on OpenVMS
    * vms_queuejobs: new check for monitoring current VMS queue jobs
    * FIX: mssql_backup: Fixed problems with datetime/timezone calculations
    * FIX: mssql agent: Added compatibility code for MSSQL 9
    * FIX: mssql agent: Fixed connection to default instances ("MSSQLSERVER")
    * FIX: mssql agent: Fixed check of databases with names starting with numbers
    * FIX: mssql agent: Fixed handling of databases with spaces in names
    * f5_bigip_temp: add performance data
    * added perf-o-meters for a lot of temperature checks
    * cmctc_lcp.*: added new checks for Rittal CMC-TC LCP